--- a/MPGI4/.classpath
+++ b/MPGI4/.classpath
@@ -2,7 +2,7 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
-	<classpathentry kind="lib" path="/afs/tu-berlin.de/home/k/karl.daeubel/irb-ubuntu/Downloads/images.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
+	<classpathentry kind="lib" path="/home/karl/Desktop/images.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
