--- a/MPGI4/.classpath
+++ b/MPGI4/.classpath
@@ -4,5 +4,6 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="lib" path="/home/karl/workspace/commons-codec-1.7/commons-codec-1.7.jar"/>
+	<classpathentry kind="lib" path="/home/karl/Desktop/images.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
